# GraphMLIR

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dconfig
.github/scripts/: build-llvm.sh  build-project.sh
.github/workflows/: build.yml
benchmarks/: Bfs.cpp  BoostBellmanFordBenchmarking.cpp  BoostFloydWarshall.cpp  BoostMinSpanningTree.cpp  CMakeLists.txt  FloydWarshall.cpp  GraphMlirBellmanFordBenchmark.cpp  GraphMlirBfs.cpp  GraphMlirFloydWarshallBenchmark.cpp  GraphMlirMinSpanningTree.cpp  LemonBFS.cpp  LemonBellmanFord.cpp  LemonMinSpanningTree.cpp  Main.cpp  MinSpanningTree.cpp
docs/html/: GraphContainer_8cpp_source.html  dir_86b2acb48dc403d1a3fcbb48606cba44.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  files.html  index.html  md_README.html  pages.html
docs/html/search/: pages_0.js
docs/latex/: GraphContainer_8cpp_source.tex  files.tex  md_README.tex  refman.tex
examples/: CMakeLists.txt  bellmanFordExample.cpp  bfs.cpp  bfs.mlir  bfsExample.cpp  bfsExample_temp.cpp  djikstraExample.cpp  floydWarshallExample.cpp  graph.mlir  minSpanningTreeExample.cpp  test.mlir
include/: CMakeLists.txt
include/Dialect/Graph/: CMakeLists.txt  GraphDialect.h  GraphDialect.td  GraphOps.h  GraphOps.td
include/Interface/: CMakeLists.txt  Container.h  GraphContainer.h  graph.h  memref.h
include/Interface/core/: Container.h  GraphContainer.h
include/Interface/graph/: graph.h
include/Utility/: Utils.h
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/LowerGraph/: CMakeLists.txt  LowerGraphPass.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Graph/: CMakeLists.txt  GraphDialect.cpp  GraphOps.cpp
lib/Interface/: CMakeLists.txt  Container.cpp  GraphContainer.cpp
lib/Interface/core/: CMakeLists.txt  Container.cpp  GraphContainer.cpp
lib/Utility/: CMakeLists.txt  Utils.cpp
tests/unittests/: CMakeLists.txt
tests/unittests/Interface/: CMakeLists.txt  ContainerTest.cpp  GraphContainerTest.cpp
tools/: CMakeLists.txt
tools/graph-opt/: CMakeLists.txt  graph-opt.cpp
unittests/: CMakeLists.txt
unittests/Interface/: CMakeLists.txt  ContainerTest.cpp  GraphContainerTest.cpp
